test/tests/stages/8_loops/valid/extra_credit/switch.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(3)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  case
  const int(1)
  :
  return
  const int(1)
  ;
  case
  const int(3)
  :
  return
  const int(3)
  ;
  case
  const int(5)
  :
  return
  const int(5)
  ;
  }
  }
