test/tests/stages/8_loops/invalid_parse/extra_credit/switch_goto_case.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(main)
  (
  void
  )
  {
  goto
  const int(3)
  ;
  switch
  (
  const int(3)
  )
  {
  case
  const int(3)
  :
  return
  const int(0)
  ;
  }
  }
